2024 update and refactoring
